tests/cases/generics/errors/generic-explicit-arity.ari
fn identity[T](value: T) -> T {
  return value;
}

fn main() -> i64 {
  return identity<i64, bool>(1);
}
